# 2023AWSCloudBootcamp

./: README.md  asrOutput.json  lambda_function.py  script.txt
AWS Academy Cloud Foundations/: README.md
AWS Academy Cloud Foundations/Module 01/: README.md
AWS Academy Cloud Foundations/Module 02/: README.md
Crawler/: crawler.py  data.csv
Presentation/: AWS Systems Manager ppt.pptx  AWS Systems Manager 조윤아.pptx  CloudFormation_요약.pptx  L조_Management_And_Governance.pptx  [발표자료_수정] Secrets Manager.pptx  [발표자료] Secrets Manager.pptx  bootcamp 프로젝트발표 - slack - 수정.pptx  bootcamp 프로젝트발표 - slack.pptx  자료조사_config_trustadvisor.pptx
express-crawler/: package-lock.json  package.json
express-crawler/routes/: index.js
git/: README.md
ics_gen/: AWS CloudBootCamp OfflineSession.ics  app.js  package-lock.json  package.json  test.ics  undefined.ics
ics_gen/generatedFiles/: %EC%8A%A4%EC%9C%97%EC%BD%94%EB%A6%AC%EC%95%84.ics  %EC%97%90%EC%9D%B4%EC%8B%9C%ED%8B%B0%EA%B2%8C%EC%9E%84%EC%A6%88.ics  AWS.ics  a company.ics  acompany.ics  b company.ics  bcompany.ics  undefined.ics
ics_gen/routes/: index.js
old/: data.csv  old.py
slack_bot_v2/: .gitignore  pyproject.toml
slack_bot_v2/slack_bot_v2/: main.py
slackbot/: .gitignore  app.js  package-lock.json  package.json
slackbot/routes/: index.js
