[tool.poetry]
name = "slack-bot-v2"
version = "0.1.0"
description = ""
authors = ["Arc1el <khm970514@gmail.com>"]
readme = "README.md"
packages = [{include = "slack_bot_v2"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
